fixed h2 line-height on mobile + finishing touch to styling

--- a/styles/sass/_typography.scss
+++ b/styles/sass/_typography.scss
@@ -1,5 +1,8 @@
-// font-family: 'Playfair Display', serif;
-// font-family: 'Roboto', sans-serif;
+// Fonts used in the project:
+// 'Playfair Display', serif;
+// 'Roboto', sans-serif;
+
+// General styling next
 
 body {
     font-family: 'Playfair Display', serif;
@@ -27,6 +30,8 @@ textarea,
     font-size: 2rem;
     line-height: 32px;
 }
+
+// Header tags styling
 
 h1,
 h2,
@@ -58,6 +63,8 @@ h4 {
     letter-spacing: 1px;
 }
 
+// Buttons styling
+
 button {
     font-family: 'Playfair Display', serif;
     font-size: 2rem;
@@ -68,12 +75,25 @@ button {
 
 @media(max-width: 980px) {
     h1 {
-        font-size: 7rem;
+        font-size: 10rem;
+        background-color: rgba(255,255,255,.7);
     }
 }
 
 @media(max-width: 720px) {
+    h1 {
+        font-size: 7rem;
+    }
 
+    h1,
+    h2 {
+        line-height: 50px;
+        background-color: rgba(255,255,255,.7);
+    }
+
+    h2 {
+        font-size: 6rem;
+    }
     
     h3 {
         font-size: 3.2rem;
@@ -89,6 +109,11 @@ button {
 }
 
 @media(max-width: 440px) {
+    h1,
+    h2 {
+        font-size: 4rem;
+    }
+
     form input,
     form textarea {
         font-size: 1.5rem;
