--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,9 +1,4 @@
-// create a partial for buttons
-// create a partial for navigation
-
-
 @import 'setup';
-@import 'mixins';
 @import 'colors';
 @import 'typography';
 
@@ -86,7 +81,6 @@ header nav label {
     background-size: cover;
     height: 100vh;
         h1 {
-            padding-top: 400px;
             position: relative;
             z-index: 2;
         }
@@ -100,7 +94,6 @@ header nav label {
     height: 80vh;
         h2 {
             text-align: center;
-            padding-top: 50px;
         }
 
 }
@@ -120,6 +113,13 @@ header nav label {
     top: 50%;
     box-shadow: 0px 40px 0px $boxShadow, -40px 40px 0px $boxShadow, -40px -40px 0px $boxShadow, 0px -40px 0px $boxShadow;
     width: 45%;
+}
+
+.header-content {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 // HOME SECTION 1
@@ -385,18 +385,17 @@ textarea {
         aside {
             padding-top: 100px;
         }
-}
-
-.contact-main form {
-    box-shadow: -30px 30px 0px 0px $boxShadow;
-    width: 70%;
-    position: relative;
-    padding: 40px;
-    bottom: 300px;
-    background-color: $footerText;
-        input,
-        textarea {
+        form {
+            box-shadow: -30px 30px 0px 0px $boxShadow;
+            width: 70%;
+            position: relative;
+            padding: 40px;
+            bottom: 300px;
             background-color: $footerText;
+                input,
+                textarea {
+                    background-color: $footerText;
+                }
         }
 }
 
@@ -436,11 +435,6 @@ textarea {
 
 // 980px HOME MEDIA QUERIES
 
-    .home-header h1 {
-        font-size: 10rem;
-        padding-top: 300px;
-    }
-
     header nav label {
         visibility: visible;
             &:hover,
@@ -467,6 +461,9 @@ textarea {
     .section-2 {
         display: block;
         text-align: center;
+            img {
+                width: 80vw;
+            }
             .subsection {
                 width: 100%;
                 padding-left: 0px;
@@ -479,10 +476,6 @@ textarea {
             }
     }
     
-    .section-2 img {
-        width: 80vw;
-    }
-
     .section-3 {
         display: block;
         text-align: center;
@@ -586,11 +579,6 @@ textarea {
 
 //720px HOME MEDIA QUERIES
 
-    .home-header h1 {
-        font-size: 7rem;
-        padding-top: 350px;
-    }
-
     .blog-header h2 {
         padding-top: 150px;
         margin-top: -100px;
@@ -622,17 +610,6 @@ textarea {
             p {
                 margin-left: 0;
             }
-    }
-}
-
-@media(max-width: 440px) {
-    .home-header h1 {
-        font-size: 4rem;
-        padding-top: 400px;
-    }
-
-    h2 {
-        font-size: 4rem;
     }
 }
 
